refactor: MenuConstants 모든 메뉴 필드 로직 변경 constants/MenuConstants - ALL_MENUS   - 자바 버전 변경으로 인한 stream 로직 변경